--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
-.*log
+*.log
 
-.*pdf
-.*aux
-.*out
-.*toc
-.*blg
+*.pdf
+*.aux
+*.out
+*.toc
+*.blg
 
-.*bbl
-.*blx.bib
+*.bbl
+*.blx.bib
+
+
+auto/*
