--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,3 @@
-<<<<<<< HEAD
-*.log
-*.aux
-*.out
-*.toc
-*.blg
-*.bbl
-*.blx.bib
-*.run
-*.run.xml
-*.synctex.gz
-*-blx.bib
-main.pdf
-
-auto/*
-=======
 *.log
 *.aux
 *.out
@@ -27,10 +11,5 @@ auto/*
 *.synctex.gz
 *-blx.bib
 *.fdb_latexmk
-main.pdf
-
+introemacs.pdf
 auto/*
-<<<<<<< HEAD
-=======
->>>>>>> 10f9ac1b34c237f0c1c1f4a050a7985e6f602836
->>>>>>> Elrond
